# figureflow

./: noxfile.py  pyproject.toml
.github/workflows/: tests.yml
tests/: __init__.py  test_figures.py
