[tool.poetry]
name = "figureflow"
version = "0.1.0"
description = ""
authors = ["Max Schelski <max.schelski@googlemail.com>"]
license = "GPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.4.3"
moviepy = "^1.0.3"
numpy = "^1.23.5"
pandas = "^1.5.2"
Pillow = "^9.3.0"
PyQt5 = "^5.15.7"
scipy = "^1.9.3"
scikit-posthocs = "^0.7.0"
seaborn = "^0.12.1"
scikit-image = "^0.19.3"
tifffile = "^2022.10.10"
python-pptx = "^0.6.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
